objects/EUR_CRM_CustomerInternalProductCodeMap__c.object
<CustomObject>
    <description>Customer Internal Product Code Mapping</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Customer Internal Product Code Maps (EU)</relationshipLabel>
        <relationshipName>Customer_Internal_Product_Code_Maps_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size (EU)</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>BQS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Internal_Product_Code__c</fullName>
        <label>Customer Internal Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Taxonomy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Taxonomy</label>
        <referenceTo>EUR_CRM_Customer_Taxonomy__c</referenceTo>
        <relationshipLabel>Customer Internal Product Code Maps (EU)</relationshipLabel>
        <relationshipName>PLU_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>Customer Internal Product Code Maps (EU)</relationshipLabel>
        <relationshipName>Customer_Internal_Product_Code_Maps_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipLabel>Customer Internal Product Code Maps (EU)</relationshipLabel>
        <relationshipName>Customer_Internal_Product_Code_Maps_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Internal Product Code Map (EU)</label>
    <listViews>
        <fullName>EUR_DK_Customer_IPC_mapping</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Customer_Internal_Product_Code__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_CustomerInternalProductCodeMap__c.EUR_DK_Customer_IPC_mapping</value>
        </filters>
        <label>All DK Customer IPC mapping</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NL_Customer_IPC_mapping</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Customer_Internal_Product_Code__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_POS_Material__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_CustomerInternalProductCodeMap__c.EUR_NL_IPC_Mapping,EUR_CRM_CustomerInternalProductCodeMap__c.EUR_NL_IPC_POSM_Mapping</value>
        </filters>
        <label>All NL Customer IPC mapping</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Customer_IPC_mapping</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Customer_Internal_Product_Code__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_CustomerInternalProductCodeMap__c.EUR_RU_Customer_IPC_Mapping</value>
        </filters>
        <label>All RU Customer IPC mapping</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CIPCM-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Internal Product Code Maps (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DK_Customer_IPC_mapping</fullName>
        <active>true</active>
        <label>EUR DK Customer IPC mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_IPC_Mapping</fullName>
        <active>true</active>
        <label>EUR NL IPC Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_IPC_POSM_Mapping</fullName>
        <active>true</active>
        <label>EUR NL IPC POSM Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Customer_IPC_Mapping</fullName>
        <active>true</active>
        <label>EUR RU Customer IPC Mapping</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>